# version 0.62.4
24/01/2020
   - Removed salt from config and updated config files.
   
# version 0.62.3
03/12/2019
   - Implemented pipe extension in the search API (margaretha)
11/12/2019
   - Added errors when requesting VC in caching process (margaretha, 
   resolved #47)
12/12/2019
   - Added support for multiple cq parameters (margaretha, resolved #46)
13/12/2019
   - Handled pipe errors and added tests (margaretha)
19/12/2019
   - Updated create update user-group API (margaretha)
20/12/2019
   - Removed transactional annotations from simple select queries (margaretha)
   - Updated free resource controller (margaretha)
15/01-2020
   - Added additional statistic figures to virtual corpus info API 
     response (margaretha)   
    
# version 0.62.2
17/10/2019
   - Handled vulnerability CVE-2019-17195. (margaretha)
8/11/2019
   - Added user-group name pattern (margaretha, issue #33)
11/11/2019
   - Updated user group service paths and replaced groupId with groupName 
     (margaretha, resolved #33)
12/11/2019
   - Removed UserGroupJson & updated listUserGroups and createUserGroup 
     services (margaretha)
   - Added prefixes to username and groupname parameters in service paths 
     (margaretha, resolved #35)
13/11/2019
   - Added tests for issue #43 (margaretha)
14/11/2019
   - Added client description and URL to list-authorized-clients service 
     (margaretha, close #53)
   - Implemented a service to list clients registered by a user (margaretha, 
     close #52)
   - Added a check for OAuth2 client, VC, and group name length (margaretha)
15/11/2019
   - Merged list authorized client and list registered client services
     (margaretha)
21/11/2019
   - Added a service to list active refresh tokens of a user (margaretha)
   - Added username filtering to token revocation service via super client 
     (margaretha)
26/11/2019
   - Added a service to revoke a single refresh token via super client 
     (margaretha)  

# version 0.62.1
08/07/2019