@@ -1,6 +1,8 @@
 # version 0.62.4
 24/01/2020
-   - Removed salt from config and updated config files.
+   - Removed salt from config and updated config files (margaretha)
+03/02/2020
+   - Added an admin API for clearing access token cache (margaretha)
    
 # version 0.62.3
 03/12/2019
